@@ -31,8 +31,8 @@ sub after_release {
     # push everything on remote branch
     for my $remote ( @{ $self->push_to } ) { 
       $self->log("pushing to $remote");
-      $git->push( $remote );
-      $git->push( { tags=>1 },  $remote );
+      $self->log_debug($_) for $git->push( $remote );
+      $self->log_debug($_) for $git->push( { tags=>1 },  $remote );
     }
 }
 
